@@ -4715,6 +4715,21 @@ RESTP.stream = function(callback) {
 	return U.download(self.$url, flags, self.$data, callback, self.$cookies, self.$headers, undefined, self.$timeout);
 };
 
+RESTP.keepalive = function() {
+	var self = this;
+	!self.$flags && (self.$flags = []);
+	self.$flags.push('keepalive');
+	return self;
+};
+
+RESTP.flags = function() {
+	var self = this;
+	!self.$flags && (self.$flags = []);
+	for (var i = 0; i < arguments.length; i++)
+		self.$flags(arguments[i]);
+	return self;
+};
+
 RESTP.exec = function(callback) {
 
 	if (!callback)
